# robotmcp_server

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  cli.py  config.py  logging_config.py  main.py  pyproject.toml  setup.py  sse.py  submodule_deps.py  submodule_integration.py  tools.py
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: publish_pypi.yml
.metrics/: daily_clone_metrics.csv  daily_view_metrics.csv  rolling_14d_clone_metrics.csv  rolling_14d_view_metrics.csv
docker/: Dockerfile.test
docs/: install.md  merge_plan.md  phase2_plan.md  project_plan.md  submodule-integration.md  workflow.md
oauth/: endpoints.py  jwt_utils.py  middleware.py  templates.py
